<resources>
    <string name="app_name">LonelyWheeler</string>
    <string name="my_offers">My offers</string>
    <string name="advanced_search">Advanced search</string>
    <string name="home">Home</string>
    <string name="equipment">Equipment</string>
    <string name="pedestrian_vehicles">Pedestrian vehicles</string>
    <string name="all_sellers">All sellers</string>
    <string name="logout">Logout</string>
    <string name="action">Action</string>
    <string name="explore">Explore</string>
    <string name="search">Search</string>
    <string name="favourites">Favourites</string>
    <string name="profile">Profile</string>
    <string name="liked">Liked</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm">Confirm</string>
    <string name="already_have_account">Already have account ?</string>
    <string name="sign_up">Sign up</string>
    <string name="dont_have_account">Do not have an account ?</string>
    <string name="last_name">Last name</string>
    <string name="first_name">First name</string>
    <string name="username">Username</string>
    <string name="mobile_number">Mobile number</string>
    <string name="confirm_password">Confirm password</string>
    <string name="city">City</string>
    <string name="street">Street</string>
    <string name="sign_in">Sign In</string>
    <string name="lonely_wheeler_title">Lonely Wheeler</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sort">Sort</string>
    <string name="condition">"Condition: "</string>
    <string name="brand">"Brand: "</string>
    <string name="model">"Model: "</string>
    <string name="year_of_production">"Year of production: "</string>
    <string name="fixed_value">"Fixed value ? "</string>
    <string name="first_owner">"You are the first owner ? "</string>
    <string name="owner_in">"Owner is in for exchange ? "</string>
    <string name="exterior_color">"Exterior color: "</string>
    <string name="interior_color">"Interior color: "</string>
    <string name="other_info">"Other info: "</string>
    <string name="lorem_ipsum">It is a long established fact that a reader will be distracted by the readable content of a page  when looking at its layout. The point of using  Lorem Ipsum is that it has a more-or-less normal  distribution of letters, as opposed to using  \'Content here, content here\', making it look  like readable English.</string>
    <string name="car_body_type">"Car body type: "</string>
    <string name="max_speed">"Max speed: "</string>
    <string name="mileage">"Mileage: "</string>
    <string name="cubic_capacity">"Cubic capacity: "</string>
    <string name="horse_power">"Horse power: "</string>
    <string name="registered_until">"Registered until: "</string>
    <string name="fuel_type">"Fule type: "</string>
    <string name="emission_standard">"Emission standard: "</string>
    <string name="gearbox_type">"Gearbox type: "</string>
    <string name="steering_wheel_side">"Steering wheel side: "</string>
    <string name="drivetrain">"Drivetrain: "</string>
    <string name="cc">cc</string>
    <string name="km">Km</string>
    <string name="km_h">Km/h</string>
    <string name="num_of_doors">"Number of doors: "</string>
    <string name="num_of_seats">"Number of seats: "</string>
    <string name="has_multimedia">"Has multimedia: "</string>
    <string name="username_placeholder">"Username: "</string>
    <string name="first_name_placeholder">"First name: "</string>
    <string name="last_name_placeholder">"Last name: "</string>
    <string name="last_name_example">Veljkovic</string>
    <string name="first_name_example">Uros</string>
    <string name="email_placeholder">"Email: "</string>
    <string name="email_example">uros.veljkovic1996@gmail.com</string>
    <string name="username_example">urkeev14</string>
    <string name="seller_info_placeholder">Seller info</string>
    <string name="telephone_placeholder">"Telephone: "</string>
    <string name="telephone_example">+381 652006854</string>
    <string name="street_example">Zaplanjska 24</string>
    <string name="preview_offers">Preview offers</string>
    <string name="personal_info_placeholder">Personal info</string>
    <string name="good_seller_indicator">Good seller indicator</string>
    <string name="bad_seller_indicator">Bad seller indicator</string>
    <string name="general_info_placeholder">General info</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="fixed_price">Fixed price ?</string>
    <string name="in_for_exchange">Are you in for exchange ?</string>
    <string name="product_specific_info_placeholder">Product specific info</string>
    <string name="number_of">"Number of: "</string>
    <string name="doors">Doors</string>
    <string name="seats_placeholder">Seats</string>
    <string name="cancel">Cancel</string>
    <string name="update">Update</string>
    <string name="enter_valid_email">Please enter valid email.</string>
    <string name="passwords_not_match">Passwords do not match.</string>
    <string name="error_username">User only alphabet characters !</string>
    <string name="error_first_name">First name can only contain alphabet characters !</string>
    <string name="error_last_name">Last name can only contain alphabet characters !</string>
    <string name="error_email">Please enter valid email.</string>
    <string name="error_city">Enter valid city name.</string>
    <string name="error_street">Enter valid street name.</string>
    <string name="product_title">Title</string>
    <string name="brand_placeholder">Brand</string>
    <string name="model_placeholder">Model</string>
    <string name="year_of_production_placeholder">"Year \n\n of \n\n production</string>
    <string name="exterior_color_placeholder">Exterior color</string>
    <string name="interior_color_placeholder">Interior color</string>
    <string name="interior_material_placeholder">Interior material</string>
    <string name="username_helper_text">Min. 6 characters | 1 number | 1 special character</string>
    <string name="max_speed_placeholder">Max speed</string>
    <string name="horse_power_placeholder">Horse power</string>
    <string name="mileage_placeholder">Mileage</string>
    <string name="persist_vehicle_title">Save offer</string>
    <string name="persit_vehicle_message">Are you sure you want to create this offer ?</string>
    <string name="equipment_type">Equipment type: </string>
    <string name="error_confirm_password">Passwords do not match.</string>
    <string name="pedestrian_vehicle_type">"Pedestrian vehicle type: "</string>
    <string name="call_seller">Call seller</string>
    <string name="call_seller_message">Are you sure you want to call the seller ?</string>
    <string name="action_unperformable">Action unperformable</string>
    <string name="action_unperformable_call">"You can not contact this seller because he did not enter his mobile number. "</string>
    <string name="requres_call_permission">You need to allow call permission to be able to call seller.</string>
    <string name="requires_sms_permission">You need to verify SMS permission in order to send SMS to seller.</string>
    <string name="send_sms">Send SMS</string>
    <string name="send_sms_message">Are you sure you want to send SMS the seller ?</string>
    <string name="product_specific_info">Product specific info</string>
    <string name="date_posted">Date posted:</string>
    <string name="edit_or_save">Edit or Save</string>
    <string name="edit">Edit</string>
    <string name="user_picture">User picture</string>
    <string name="uros_veljkovic">Uros Veljkovic</string>
    <string name="offer_type">Offer type: </string>
    <string name="from">From:</string>
    <string name="to">"To: "</string>
    <string name="min">Min</string>
    <string name="max">Max</string>
    <string name="delete">Delete</string>
    <string name="delete_offer_title">Delete offer ?</string>
    <string name="delete_offer_message">Do you really want to delete this offer ?</string>
    <string name="body_type">Body type:</string>
    <string name="delete_account">Delete account</string>
    <string name="searching_for">I am searching for:</string>
    <string name="dash">-</string>
    <string name="error_year">Invalid year input</string>
    <string name="error_price">Invalid price</string>
    <string name="max_offer_age">Maximum\noffer age\n(in days)</string>
    <string name="price">Price</string>
    <string name="other_info_placeholder">Other info</string>
    <string name="delete_account_message">Are you sure you want to delete your account ?</string>
    <string name="sort_by">Sort by</string>
</resources>