<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    >

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_drawer_nome"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_pedestrian_vehicles"
            android:icon="@drawable/ic_drawer_bycicle"
            android:title="@string/pedestrian_vehicles" />
        <item
            android:id="@+id/nav_equipment"
            android:icon="@drawable/ic_drawer_equipment"
            android:title="@string/equipment" />
        <item
            android:id="@+id/nav_all_sellers"
            android:icon="@drawable/ic_drawer_store"
            android:title="@string/all_sellers" />
        <item
            android:id="@+id/nav_advanced_search"
            android:icon="@drawable/ic_drawer_advanced_search"
            android:title="@string/advanced_search" />
        <item
            android:visible="false"
            android:id="@+id/invisible1"
            android:enabled="false"
            android:title=""/>
        <item
            android:visible="false"
            android:id="@+id/invisible2"
            android:enabled="false"
            android:title=""/>
        <item
            android:visible="false"
            android:id="@+id/invisible3"
            android:enabled="false"
            android:title=""/>
        <item
            android:visible="false"
            android:id="@+id/invisible4"
            android:enabled="false"
            android:title=""/>
    </group>
    

    <item android:title="@string/action">
        <menu>
            <item
                android:id="@+id/nav_my_offers"
                android:icon="@drawable/ic_drawer_offer"
                android:title="@string/my_offers" />
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_drawer_logout"
                android:title="@string/logout" />
        </menu>
    </item>

</menu>