<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpActivity">


    <ImageView
        android:id="@+id/activitySignIn_ivLonelyWheelerLogo"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginTop="32dp"
        android:src="@mipmap/ic_launcher"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/activitySignIn_tvLonelyWheelerTitle"
        style="@style/TextAppearance.LonelyWheeler.Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="32dp"
        android:text="Lonely Wheeler"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activitySignIn_ivLonelyWheelerLogo" />


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="16dp"
        android:orientation="vertical"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toTopOf="@id/activitySignIn_tvAlreadyHaveAccount"
        app:layout_constraintTop_toBottomOf="@id/activitySignIn_tvLonelyWheelerTitle">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/activitySignIn_tilFirstName"
                style="@style/Widget.LonelyWheeler.TextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:hint="@string/first_name"
                app:startIconDrawable="@drawable/ic_person_round">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/activitySignIn_etFirstName"
                    style="@style/Widget.LonelyWheeler.TextInputEditText"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:maxLines="1" />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/activitySignIn_tilLastName"
                style="@style/Widget.LonelyWheeler.TextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:hint="@string/last_name"
                app:startIconDrawable="@drawable/ic_person_round">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/activitySignIn_etLastName"
                    style="@style/Widget.LonelyWheeler.TextInputEditText"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:maxLines="1" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/activitySignIn_tilUsername"
                style="@style/Widget.LonelyWheeler.TextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:hint="@string/username"
                app:startIconDrawable="@drawable/ic_person_round">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/activitySignIn_etUsername"
                    style="@style/Widget.LonelyWheeler.TextInputEditText"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:maxLines="1" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/activitySignIn_tilMobileNumber"
                style="@style/Widget.LonelyWheeler.TextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:hint="@string/mobile_number"
                app:startIconDrawable="@drawable/ic_person_round">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/activitySignIn_etMobileNumber"
                    style="@style/Widget.LonelyWheeler.TextInputEditText"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:maxLines="1" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/activitySignIn_tilEmail"
                style="@style/Widget.LonelyWheeler.TextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:hint="@string/email"
                app:startIconDrawable="@drawable/ic_email">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/activitySignIn_etEmail"
                    style="@style/Widget.LonelyWheeler.TextInputEditText"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textEmailAddress"
                    android:maxLines="1" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/activitySignIn_tilPassword"
                style="@style/Widget.LonelyWheeler.TextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                app:passwordToggleEnabled="true"
                app:startIconDrawable="@drawable/ic_lock">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/activitySignIn_etPassword"
                    style="@style/Widget.LonelyWheeler.TextInputEditText"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textPassword" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/activitySignIn_tilConfirmPassword"
                style="@style/Widget.LonelyWheeler.TextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/confirm_password"
                app:passwordToggleEnabled="true"
                app:startIconDrawable="@drawable/ic_lock">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/activitySignIn_etConfirmPassword"
                    style="@style/Widget.LonelyWheeler.TextInputEditText"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textPassword" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/activitySignIn_tilCity"
                style="@style/Widget.LonelyWheeler.TextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:hint="@string/city"
                app:startIconDrawable="@drawable/ic_place">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/activitySignIn_etCity"
                    style="@style/Widget.LonelyWheeler.TextInputEditText"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:maxLines="1" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/activitySignIn_tilStreet"
                style="@style/Widget.LonelyWheeler.TextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:hint="@string/street"
                app:startIconDrawable="@drawable/ic_home">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/activitySignIn_etStreet"
                    style="@style/Widget.LonelyWheeler.TextInputEditText"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:maxLines="1" />

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>


    </ScrollView>


    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/activitySignIn_tvAlreadyHaveAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:text="@string/already_have_account"
        app:layout_constraintBottom_toBottomOf="@id/activitySignIn_tvSignUp"
        app:layout_constraintEnd_toStartOf="@+id/activitySignIn_tvSignUp"
        app:layout_constraintTop_toTopOf="@id/activitySignIn_tvSignUp" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/activitySignIn_tvSignUp"
        style="@style/TextAppearance.LonelyWheeler.ClickableTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/sign_up"
        app:layout_constraintBottom_toTopOf="@id/activitySignIn_btnConfirm"
        app:layout_constraintEnd_toEndOf="parent" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/activitySignIn_btnConfirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="32dp"
        android:text="@string/confirm"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>